saap/saap-frontend/.kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: saapview-service
spec:
  selector:
    app: saapview-pod
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80 #porta interna
      targetPort: 80 #porta a aplicação
