saap/saap-frontend/.kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saapview-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/server-alias: saap.policiacivil.go.gov.br
spec:
  tls:
    - hosts:
        - saap-homo.policiacivil.go.gov.br
        - saap.policiacivil.go.gov.br
      secretName: certificado-pc
  rules:
    - host: saap-homo.policiacivil.go.gov.br
      http:
        paths:
          - backend:
              service:
                name: saapview-service
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
